<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/bg_dialog_while">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:layout_marginBottom="8dp"
        android:theme="@style/ThemeImgButtonWhile"
        android:drawableLeft="@drawable/ic_trast"/>

    <Button
        android:id="@+id/btn_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_rename"
        android:layout_marginBottom="8dp"
        android:theme="@style/ThemeImgButtonWhile"
        android:drawableLeft="@drawable/ic_edit"/>

    <Button
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_share"
        android:layout_marginBottom="8dp"
        android:theme="@style/ThemeImgButtonWhile"
        android:drawableLeft="@drawable/ic_share"/>

    <Button
        android:id="@+id/btn_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_favorite"
        android:layout_marginBottom="8dp"
        android:theme="@style/ThemeImgButtonWhile"
        android:drawableLeft="@drawable/ic_favorite"/>
</LinearLayout>

