<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_iap"
    android:fitsSystemWindows="true"
    android:paddingBottom="16dp"
    tools:context=".ui.activity.IAPActivity">

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/txt_title1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/title1"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/txt_title2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:textSize="12sp"
        android:lineHeight="24dp"
        android:text="@string/title2"
        android:textColor="@color/white80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title1" />

    <include
        android:id="@+id/btn_price_month"
        layout="@layout/item_iap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_price_year"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title2" />

    <include
        android:id="@+id/btn_price_year"
        layout="@layout/item_iap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_price_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_price_month"
        app:layout_constraintTop_toTopOf="@+id/btn_price_month" />

    <TextView
        android:id="@+id/txt_best_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_best_offer"
        android:gravity="center"
        android:text="@string/best_offer"
        android:textSize="12sp"
        android:paddingHorizontal="8dp"
        android:textColor="@color/doc_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_price_year"
        app:layout_constraintEnd_toEndOf="@+id/btn_price_year"
        app:layout_constraintStart_toStartOf="@+id/btn_price_year"
        app:layout_constraintTop_toTopOf="@+id/btn_price_year" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="16dp"
        android:text="@string/btn_continue"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textColor="@color/doc_color"
        android:textStyle="bold"
        android:theme="@style/ThemeImgButtonWhile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_price_month" />

    <TextView
        android:id="@+id/txt_title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title3"
        android:textSize="12sp"
        android:textColor="@color/white50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue" />

    <TextView
        android:id="@+id/txt_private_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/privacy_policy"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title3" />

</androidx.constraintlayout.widget.ConstraintLayout>